[project]
name = "dedupe-episodes"
version = "0.1.1"
description = "Dedupe TV episodes by quality. Keep best (resolution + PROPER/REPACK), delete worse + sidecar files."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "asm0dey", email = "pavel.finkelshtein@gmail.com" },
]
keywords = ["tv", "episodes", "dedupe", "media", "library", "quality", "guessit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "guessit>=3.8.0",
    "tqdm>=4.67.3",
]

[project.scripts]
dedupe-episodes = "dedupe_episodes.cli:main"

[project.urls]
Homepage = "https://github.com/asm0dey/dedupe-episodes"
Repository = "https://github.com/asm0dey/dedupe-episodes"
Issues = "https://github.com/asm0dey/dedupe-episodes/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dedupe_episodes"]

[dependency-groups]
dev = [
    "nuitka[onefile]>=4.0.8",
    "pyfakefs>=6.2.0",
    "pyhamcrest>=2.1.0",
    "pytest>=9.0.3",
]

[tool.uv]
# Cache and project dirs may be on different filesystems (no hardlinks).
link-mode = "copy"
